# usdStl

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  fileFormat.cpp  fileFormat.h  plugInfo.json
src/testenv/: CMakeLists.txt  cube.stl  testUsdStl.cpp  testUsdStl.usda  testUsdStlExpected.usda
